2009-12-26  Bernhard Walle <bernhard@bwalle.de>

	* Fix the problem that the menu bar is not displayed on MacOS.
	* Check for "glibtoolize" before running "libtoolize" to fix build
	  after a fresh SVN checkout on MacOS.
	* Use "/bin/echo -n" instead of "echo -n" because /bin/sh echo of
	  MacOS doesn't support the "-n" argument.

2009-11-29  Bernhard Walle <bernhard@bwalle.de>

	* Update libusb on Win32 to version 0.1.12.2.

2009-11-08  Bernhard Walle <bernhard@bwalle.de>

	* Replace email address (bernhard.walle@gmx.de -> bernhard@bwalle.de)
	  in all dialogs and source files.
	* Update Copyright date to 2009.

2009-04-04  Bernhard Walle <bernhard@bwalle.de>

	* Fix GUI on MacOS X (contributed by Nabil Sayegh)

2009-03-17  Bernhard Walle <bernhard@bwalle.de>

	* Change some autoconf/automake/libtool stuff.
	* Print error when downloading fails with a non 400 status code.

2009-01-31  Bernhard Walle <bernhard@bwalle.de>

	* Fix problem that prevented the last byte of the firmware from
	  being copied
	  (http://www.embedded-projects.net/bugs/index.php?do=details&task_id=5)

2009-01-27  Bernhard Walle <bernhard@bwalle.de>

	* Fix problem with recent wxGtk versions that the whole GUI was
	  hanging when updating the progress bar.

2008-11-09  Bernhard Walle <bernhard@bwalle.de>

	* Fix build with gcc 4.4, patch from Martin Michlmayr <tbm@cyrius.com>

2008-08-03  Bernhard Walle <bernhard@bwalle.de>

	* fix tab completion for multiple matches (like 'device' and 'devices')

2008-07-03  Bernhard Walle <bernhard@bwalle.de>

	* fix indentation
	* fix compiler warning: commands.cc:997: warning: control reaches end
	  of non-void function

2008-07-02  Bernhard Walle <bernhard@bwalle.de>

	* fix problem that firmware with more than 16k can't be flashed
	  (http://www.embedded-projects.net/bugs/index.php?do=details&task_id=2)

2008-06-28  Bernhard Walle <bernhard@bwalle.de>

	* add warning in Windows installer that Windows Vista is unsupported